
2020-07-07  Ron Norman <rjn@inglenet.com>

	* call.c,common.h: Add new functions cob_call_cobol and cob_call_entry
			for C modules to call COBOL modules using 'stdarg' type of
				parameter passing.

2020-06-25  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c (cob_file_close) [_WIN32]: pipe code compiles again, but still
	  is not tested...
	* common.c (cob_sys_system): deactivated WEXITSTATUS for now as MicroFocus
	  doesn't do this --> may be added later with a runtime configuration
	* common.h, coblocal.h (cob_runtime_hint, cob_runtime_error,
	  cob_runtime_warning): made runtime message functions available again

2020-06-23  Ron Norman <rjn@inglenet.com>

	* exception.def: Added COB_EC_DELETE_FILE
	* fileio.c: Set COB_EC_DELETE_FILE as required
	* fextfh.c: Prepare for cob_delete_file given 'override' option

2020-06-20  Ron Norman <rjn@inglenet.com>

	* common.h: add mapkey to cob_file
	* fileio.c,fisam.c: Fix to handle old VBISAM that does not support 
	            sparse indexes

2020-06-20  Ron Norman <rjn@inglenet.com>

	* fisam.c,fbdb.c: Fix to return status 21 instead of 22 when OPEN OUTPUT

2020-06-18  Ron Norman <rjn@inglenet.com>

	* coblocal.h,common.h: add flags for LS_INSTAB (Like MF INSERTTAB)
	* common.c: Accept COB_MF_LS_INSTAB/mf_ls_instab in runtime.cfg
	* fileio.c: Handle "ls_instab" option similar to MF INSERTTAB

2020-06-16  Ron Norman <rjn@inglenet.com>

	* call.c: added cob_get_dbl_param & cob_put_dbl_param
	* common.h: added cob_get_dbl_param & cob_put_dbl_param

2020-06-14  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_external_addr): if size and name matches the errno
	  register -> return its address so the COBOL program may directly
	  access it - late part of FR #49
	* call.c (insert), common.c (cob_init): ignore [_WIN32] if either
	  [HAVE_CANONICALIZE_FILE_NAME] or [HAVE_REALPATH] is defined

2020-06-12  Ron Norman <rjn@inglenet.com>

	* fileio.c: Fixed problem with updating key definitions