@@ -1,6 +1,10 @@
 
 2020-07-07  Ron Norman <rjn@inglenet.com>
 
+	* call.c,common.h: Remove  cob_set_num_params
+
+2020-07-07  Ron Norman <rjn@inglenet.com>
+
 	* call.c,common.h: Add new functions cob_call_cobol and cob_call_entry
 			for C modules to call COBOL modules using 'stdarg' type of
 				parameter passing.
